--- a/Figaro/Figaro/Views/SeleccionarTipoCocinaIni.xaml
+++ b/Figaro/Figaro/Views/SeleccionarTipoCocinaIni.xaml
@@ -14,7 +14,7 @@
       <ListView.ItemTemplate>
         <DataTemplate>
           <ViewCell>
-            <StackLayout Orientation="Horizontal" HeightRequest="100">
+            <StackLayout Orientation="Horizontal" HeightRequest="200">
               <RelativeLayout Padding="0,0,0,0">
                 <Image Source="{Binding Imagen}"
                        RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}"
@@ -22,10 +22,12 @@
                        Aspect="AspectFill"/>
                 <Grid RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}"
                         RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height}">
-
-                  <Label Text="{Binding Titulo}" VerticalOptions="Center"
-                      HorizontalOptions="Center" FontSize="30" TextColor="White"/>
-
+                    <StackLayout HorizontalOptions="Center" VerticalOptions="Center" >
+                        <Image x:Name="IconoCocina" Source="{Binding Icono}" Margin="0,0,0,10" 
+                            HeightRequest="50" WidthRequest="50"/>
+                        <Label Text="{Binding Titulo}" 
+                            HorizontalOptions="Center" FontSize="26" TextColor="White"/>
+                    </StackLayout>
                 </Grid>
               </RelativeLayout>
             </StackLayout>
