--- a/WebServicesFigaro/Views/TipoCocinaMvc/Index.cshtml
+++ b/WebServicesFigaro/Views/TipoCocinaMvc/Index.cshtml
@@ -20,6 +20,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Imagen)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Icono)
+        </th>
         <th></th>
     </tr>
 
@@ -33,6 +36,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Imagen)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Icono)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
