--- a/WebServicesFigaro/Views/TipoCocinaMvc/Details.cshtml
+++ b/WebServicesFigaro/Views/TipoCocinaMvc/Details.cshtml
@@ -26,6 +26,14 @@
             @Html.DisplayFor(model => model.Imagen)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Icono)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Icono)
+        </dd>
+
     </dl>
 </div>
 <p>
