--- a/Figaro/Figaro/Views/LoginMail.xaml
+++ b/Figaro/Figaro/Views/LoginMail.xaml
@@ -2,11 +2,11 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Figaro.Views.LoginMail"
-             BackgroundImage="moscow.jpg"
+             BackgroundImage="login_background.jpg"
              BindingContext="{Binding LoginViewModel, Source={StaticResource ViewModelLocator}}">
   <ContentPage.Content>
     <StackLayout VerticalOptions="Start" HorizontalOptions="Center" Padding="0,20">
-      <Image Source="logo_figaro.png" Margin="0,40"/>
+      <Image Source="logo_figaro.png" Margin="0,40" HeightRequest="80"/>
       <Label x:Name="Message" Margin="0"
        TextColor="#CC0311" IsVisible="False" IsEnabled="False"/>
       <Entry x:Name="Email" Placeholder="CORREO ELECTRÓNICO" PlaceholderColor="White"
@@ -20,7 +20,7 @@
                      HeightRequest="50" WidthRequest="50"
                      HorizontalOptions="Center" VerticalOptions="Center"/>
       <Button Text="INICIAR SESIÓN" Clicked="Login_OnClicked" Margin="0,10"
-              BackgroundColor="#CC0311" TextColor="White"/>
+              BackgroundColor="#CC0311" TextColor="White" IsEnabled="{Binding IsIdle}"/>
       <Button Text="CANCELAR"  Clicked="Cancel_OnClicked" Margin="0,10"
               BackgroundColor="Transparent" TextColor="White" />
 
