--- a/Figaro/Figaro/Views/Registrar.xaml
+++ b/Figaro/Figaro/Views/Registrar.xaml
@@ -2,11 +2,11 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Figaro.Views.Registrar"
-             BackgroundImage="moscow.jpg"
+             BackgroundImage="login_background.jpg"
              BindingContext="{Binding LoginViewModel, Source={StaticResource ViewModelLocator}}">
   <ContentPage.Content>
     <StackLayout VerticalOptions="Start" HorizontalOptions="Center" Padding="0,20">
-      <Image Source="logo_figaro.png" Margin="0,40"/>
+      <Image Source="logo_figaro.png" Margin="0,40" HeightRequest="80"/>
       <Label x:Name="AvisoNombre" Text="Campo Obligatorio" Margin="0"
              TextColor="#CC0311" IsVisible="False" IsEnabled="False"/>
       <Entry x:Name="Nombre" Placeholder="NOMBRE"    PlaceholderColor="White"
