--- a/WebServicesFigaro/Views/UsuarioMvc/Details.cshtml
+++ b/WebServicesFigaro/Views/UsuarioMvc/Details.cshtml
@@ -80,6 +80,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.CP)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CP)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Estado)
         </dt>
 
