--- a/Figaro/Figaro/Views/LoginFacebook.xaml
+++ b/Figaro/Figaro/Views/LoginFacebook.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Figaro.Views.LoginFacebook"
              BindingContext="{Binding FacebookViewModel, Source={StaticResource ViewModelLocator}}"
-             BackgroundImage="moscow.jpg">
+             BackgroundImage="login_background.jpg">
 
   <StackLayout x:Name="MainStackLayout"
                 VerticalOptions="Center" HorizontalOptions="Center">
