--- a/Figaro/Figaro/Views/SeleccionarMail.xaml
+++ b/Figaro/Figaro/Views/SeleccionarMail.xaml
@@ -2,12 +2,12 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Figaro.Views.SeleccionarMail"
-            BackgroundImage="moscow.jpg"
+            BackgroundImage="login_background.jpg"
             BindingContext="{Binding LoginViewModel, Source={StaticResource ViewModelLocator}}">
   <ContentPage.Content>
     <StackLayout VerticalOptions="Start" HorizontalOptions="Center" Padding="0,20">
-      <Image Source="logo_figaro.png" Margin="0,40"/>
-      <Label x:Name="Message" Margin="0"
+            <Image Source="logo_figaro.png" Margin="0,40" HeightRequest="80"/>
+            <Label x:Name="Message" Margin="0"
        TextColor="#CC0311" IsVisible="False" IsEnabled="False"/>
       <Entry x:Name="Email" Placeholder="CORREO ELECTRÓNICO" PlaceholderColor="White"
               BackgroundColor="Transparent" TextColor="White"
