--- a/WebServicesFigaro/Views/UsuarioMvc/Delete.cshtml
+++ b/WebServicesFigaro/Views/UsuarioMvc/Delete.cshtml
@@ -77,6 +77,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.CP)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CP)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Estado)
         </dt>
 
