--- a/WebServicesFigaro/Views/UsuarioMvc/Index.cshtml
+++ b/WebServicesFigaro/Views/UsuarioMvc/Index.cshtml
@@ -30,6 +30,9 @@
             @Html.DisplayNameFor(model => model.Ciudad)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.CP)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Direccion)
         </th>
         <th></th>
@@ -55,6 +58,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Ciudad)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.CP)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Direccion)
