--- a/Figaro/Figaro/Views/ChefsPage.xaml
+++ b/Figaro/Figaro/Views/ChefsPage.xaml
@@ -9,17 +9,25 @@
               x:Name="chefsPage"
               Title="Chefs">
 
-  <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+
+    <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" >
 
     <ActivityIndicator IsRunning="{Binding IsBusy}"
                    IsVisible="{Binding IsBusy}"
                    HeightRequest="50" WidthRequest="50"
                    HorizontalOptions="Center" VerticalOptions="Center"/>
-    
-    <StackLayout Orientation="Vertical"
-                 IsEnabled="{Binding IsIdle}" IsVisible="{Binding IsIdle}">
-      <!--<Label x:Name="StatusMessage" Text="{Binding StatusMessage}" />-->
 
+    <StackLayout Orientation="Vertical"
+                 IsEnabled="{Binding IsIdle}" IsVisible="{Binding IsIdle}" >
+      <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" 
+                   BackgroundColor="#CC0311" Opacity="0.6">
+        <Label x:Name="AvisoFiltro" FontSize="16" FontAttributes="Bold" TextColor="White"
+            HorizontalOptions="CenterAndExpand" Margin="10,12" IsVisible="False" />
+        <!--Cerrar filtro-->
+        <!--<Image x:Name="CerrarFiltro">
+            <Image.GestureRecognizers Tapped="CerrarFiltro_OnTapped"/>
+        </Image>-->
+      </StackLayout>
       <Label x:Name="AvisoChefs" 
              FontSize="24" TextColor="#CC0311" HorizontalOptions="Center"
              Text="No hay chefs disponibles"/>
